--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "chalk": "^4.1.2",
     "express": "^4.18.2",
     "fs": "^0.0.1-security",
+    "matter-js": "^0.19.0",
     "msgpack-lite": "^0.1.26",
     "nanotimer": "^0.3.15",
     "prettier": "^2.8.8",
